Added graphics and inserted sample diagramm.

--- a/Presentation.tex
+++ b/Presentation.tex
@@ -113,6 +113,14 @@ The theme provides sensible defaults to \emph{emphasize} text,
 \alert{accent} parts or show \textbf{bold} results.
 \end{frame}
 
+\begin{frame}{Prozent der Bearbeitungszeit pro Area of Interest}
+   \begin{figure}
+       \includegraphics[scale=0.8]{graphics/section_percent.png}
+       \caption{\label{fig:section_percent} Die prozentuale Verteilung der Bearbeitungszeit auf verschiedene Areas of Interest (AOI)
+       }
+   \end{figure}
+\end{frame}
+
 \begin{frame}{Font feature test}
 \begin{itemize}
 \item Regular
