--- a/Presentation.tex
+++ b/Presentation.tex
@@ -7,17 +7,16 @@
 \usepackage[scale=2]{ccicons}
 
 \usepackage{pgfplots}
-\usepgfplotslibrary{dateplot}
 
 \usepackage{xspace}
 \newcommand{\themename}{\textbf{\textsc{metropolis}}\xspace}
 
-\title{Metropolis}
-\subtitle{A modern beamer theme}
+\title{API-Usability}
+\subtitle{Effekte der Konstruktoren}
 \date{\today}
-\author{Matthias Vogelgesang}
-\institute{Center for modern beamer themes}
-% \titlegraphic{\hfill\includegraphics[height=1.5cm]{logo.pdf}}
+\author{Elias Hofele, David Oberacker und Calvin Urnakar}
+\institute{Institut für Telematik, Telecooperation Office (TECO), Karlsruher Institut für Technologie}
+\titlegraphic{\hfill\includegraphics[height=0.5cm]{TECO_Logo.jpg}}
 
 \begin{document}
     
@@ -26,94 +25,46 @@
     \begin{frame}{Table of contents}
     \setbeamertemplate{section in toc}[sections numbered]
     \tableofcontents[hideallsubsections]
-\end{frame}
+	\end{frame}
 
 \section{Introduction}
 
-\begin{frame}[fragile]{Metropolis}
-
-The \themename theme is a Beamer theme with minimal visual noise
-inspired by the \href{https://github.com/hsrmbeamertheme/hsrmbeamertheme}{\textsc{hsrm} Beamer
+	\begin{frame}[fragile]{Metropolis}
+	The \themename theme is a Beamer theme with minimal visual noise
+	inspired by the \href{https://github.com/hsrmbeamertheme/hsrmbeamertheme}{\textsc{hsrm} Beamer
     Theme} by Benjamin Weiss.
 
-Enable the theme by loading
+	Enable the theme by loading
 
-\begin{verbatim}    \documentclass{beamer}
-\usetheme{metropolis}\end{verbatim}
+	\begin{verbatim}    \documentclass{beamer}
+	\usetheme{metropolis}\end{verbatim}
 
-Note, that you have to have Mozilla's \emph{Fira Sans} font and XeTeX
-installed to enjoy this wonderful typography.
-\end{frame}
-\begin{frame}[fragile]{Sections}
-Sections group slides of the same topic
+	Note, that you have to have Mozilla's \emph{Fira Sans} font and XeTeX
+	installed to enjoy this wonderful typography.
+	\end{frame}
 
-\begin{verbatim}    \section{Elements}\end{verbatim}
+	\begin{frame}[fragile]{Sections}
+	Sections group slides of the same topic
 
-for which \themename provides a nice progress indicator \ldots
-\end{frame}
+	\begin{verbatim}    \section{Elements}\end{verbatim}
 
-\section{Title formats}
-
-\begin{frame}{Metropolis title formats}
-\themename supports 4 different title formats:
-\begin{itemize}
-\item Regular
-\item \textsc{Small caps}
-\item \textsc{all small caps}
-\item ALL CAPS
-\end{itemize}
-They can either be set at once for every title type or individually.
-\end{frame}
-
-{
-\metroset{titleformat frame=smallcaps}
-\begin{frame}{Small caps}
-This frame uses the \texttt{smallcaps} title format.
-
-\begin{alertblock}{Potential Problems}
-Be aware that not every font supports small caps. If for example you typeset your presentation with pdfTeX and the Computer Modern Sans Serif font, every text in small caps will be typeset with the Computer Modern Serif font instead.
-\end{alertblock}
-\end{frame}
-}
-
-{
-\metroset{titleformat frame=allsmallcaps}
-\begin{frame}{All small caps}
-This frame uses the \texttt{allsmallcaps} title format.
-
-\begin{alertblock}{Potential problems}
-As this title format also uses small caps you face the same problems as with the \texttt{smallcaps} title format. Additionally this format can cause some other problems. Please refer to the documentation if you consider using it.
-
-As a rule of thumb: just use it for plaintext-only titles.
-\end{alertblock}
-\end{frame}
-}
-
-{
-\metroset{titleformat frame=allcaps}
-\begin{frame}{All caps}
-This frame uses the \texttt{allcaps} title format.
-
-\begin{alertblock}{Potential Problems}
-This title format is not as problematic as the \texttt{allsmallcaps} format, but basically suffers from the same deficiencies. So please have a look at the documentation if you want to use it.
-\end{alertblock}
-\end{frame}
-}
+	for which \themename provides a nice progress indicator \ldots
+	\end{frame}
 
 \section{Elements}
 
-\begin{frame}[fragile]{Typography}
-\begin{verbatim}The theme provides sensible defaults to
-\emph{emphasize} text, \alert{accent} parts
-or show \textbf{bold} results.\end{verbatim}
+	\begin{frame}[fragile]{Typography}
+	\begin{verbatim}The theme provides sensible defaults to
+	\emph{emphasize} text, \alert{accent} parts
+	or show \textbf{bold} results.\end{verbatim}
 
-\begin{center}becomes\end{center}
+	\begin{center}becomes\end{center}
 
-The theme provides sensible defaults to \emph{emphasize} text,
-\alert{accent} parts or show \textbf{bold} results.
-\end{frame}
+	The theme provides sensible defaults to \emph{emphasize} text,
+	\alert{accent} parts or show \textbf{bold} results.
+	\end{frame}
 
-\begin{frame}{Prozent der Bearbeitungszeit pro Area of Interest}
+\begin{frame}{Bearbeitungszeit pro Area of Interest}
    \begin{figure}
        \includegraphics[scale=0.8]{graphics/section_percent.png}
        \caption{\label{fig:section_percent} Die prozentuale Verteilung der Bearbeitungszeit auf verschiedene Areas of Interest (AOI)
@@ -157,6 +108,7 @@ Descriptions
 \end{description}
 \end{columns}
 \end{frame}
+
 \begin{frame}{Animation}
 \begin{itemize}[<+- | alert@+>]
 \item \alert<4>{This is\only<4>{ really} important}
@@ -164,6 +116,7 @@ Descriptions
 \item And now this
 \end{itemize}
 \end{frame}
+
 \begin{frame}{Figures}
 \begin{figure}
 \newcounter{density}
