second round of updates
added better graphics for results section

--- a/Presentation.tex
+++ b/Presentation.tex
@@ -154,15 +154,26 @@
 \section{Resultate}
 
 	\begin{frame}{Stichprobenbeschreibung}
-	
+	 
 	\end{frame}
 
-	\begin{frame}{Bearbeitungszeit nach Constructor}
+	\begin{frame}{Bearbeitungszeit nach Konstruktor}
 		\begin{figure}
-			\includegraphics[scale=0.35]{graphics/box_time-constructor.png}
-			\caption{\label{fig:box_time-constructor.png} Die prozentuale Verteilung der Bearbeitungszeit auf verschiedene Areas of Interest (AOI)}
+			\includegraphics[scale=0.37]{graphics/box_time-constructor.png}
+			\caption{\label{fig:box_time-constructor.png} Die Bearbeitungszeit nach Art des Konstruktors}
 		\end{figure}
 	\end{frame}
+
+	\begin{frame}{Bearbeitungszeit nach AOI}
+		\begin{figure}
+			\includegraphics[scale=0.38]{graphics/box_time-aoi_sem.png}
+			\caption{\label{fig:box_time-aoi_sem.png} Die Bearbeitungszeit der verschiedenen Areas of Interest (AOI) der Semantischen Aufgaben nach Art des Konstruktors}
+		\end{figure}
+	\end{frame}
+
+	\begin{frame}{Validität}
+
+	\end{frame}	
 
 \section{Vielen Dank für eure Aufmerksamkeit}
 
