third round of updates
added initial draft for slide on API-Usability

--- a/Presentation.tex
+++ b/Presentation.tex
@@ -31,7 +31,22 @@
 
 \section{Motivation}
 
-	\begin{frame}{APIs \& Benutzbarkeit}
+	\begin{frame}[fragile]{APIs \& Benutzbarkeit}
+		\metroset{block=fill}
+		\begin{block}{Usability}
+			\textit{Extent to which a system, product or service can be used by specified users to achieve specified goals with effectiveness,
+				efficiency and satisfaction in a specified context of use.}	
+			\hfill - ISO 9241-11
+		\end{block}
+		\vspace{\baselineskip}
+		\begin{block}{API Usability}
+			\textit{[...] four main research questions, which characterize fundamental aspects of usability: understandability, abstraction level, reusability, and learnability.}	
+			\hfill - Piccioni, Furia \& Meyer
+		\end{block}
+		\begin{block}{API Usability}
+			\textit{The first-level arributes are: Knowability, Operability, Efficiency, Robustness, Safety, Subjective satisfaction.}	
+			\hfill - Mosqueira-Rey, et. al
+		\end{block}
 	
 	\end{frame}
 
@@ -166,8 +181,8 @@
 
 	\begin{frame}{Bearbeitungszeit nach AOI}
 		\begin{figure}
-			\includegraphics[scale=0.38]{graphics/box_time-aoi_sem.png}
-			\caption{\label{fig:box_time-aoi_sem.png} Die Bearbeitungszeit der verschiedenen Areas of Interest (AOI) der Semantischen Aufgaben nach Art des Konstruktors}
+			\includegraphics[scale=0.39]{graphics/box_time-aoi_sem.png}
+			\caption{\label{fig:box_time-aoi_sem.png} Die Bearbeitungszeit der verschiedenen Areas of Interest (AOI) der semantischen Aufgaben nach Art des Konstruktors}
 		\end{figure}
 	\end{frame}
 
@@ -312,7 +327,7 @@
 	\begin{frame}{References}
 		Some references to showcase [allowframebreaks] \cite{knuth92,ConcreteMath,Er01,greenwade93}
 	\end{frame}
-	
- \end{comment}
+
+\end{comment}
 
 \end{document}
