Fixed some mistakes and some stuff.

--- a/Presentation.tex
+++ b/Presentation.tex
@@ -42,7 +42,7 @@
 		\vspace{\baselineskip}
 		\begin{block}{API Usability i}
 			\textit{[...] four main research questions, which characterize fundamental aspects of usability: understandability, abstraction level, reusability, and learnability.}	
-			\hfill - Piccioni, Furia \& Meyer
+			\hfill - Piccioni, Furia \& Meyer~\cite{6681333}
 		\end{block}
 		\begin{block}{API Usability ii}
 			\textit{The first-level arributes are: Knowability, Operability, Efficiency, Robustness, Safety, Subjective satisfaction.}	
@@ -81,14 +81,14 @@
 			We found the create-set-call pattern to be more
 			usable than, and preferred to, required constructors.
 		\end{quote}
-		\hfill - Stylos \& Clarke\\
+		\hfill - Stylos \& Clarke~\cite{Stylos:2007:UIR:1248820.1248828}\\
 		\vspace{\baselineskip}
 		\vspace{\baselineskip}
 		\begin{quote}
 			In our study, however, the participants had no particular
 			difficulties with using constructors with arguments [...]. 
 		\end{quote}
-		\hfill - Piccioni, Furia \& Meyer
+		\hfill - Piccioni, Furia \& Meyer~\cite{6681333}
 	
 	
 	\end{frame}
@@ -105,7 +105,7 @@
 		\begin{itemize}
 			\item Web-basierte Studie\\
 			\vspace{\baselineskip}
-			\item Vier Codeschnipsel pro Proband\\
+			\item Vier Quellcode-Ausschnitte pro Proband\\
 			\vspace{\baselineskip}
 			\item Fehlersuche\\
 			\vspace{\baselineskip}
@@ -149,12 +149,14 @@
 
 \section{Experimentalaufbau}
 
-	\begin{frame}{Aufgabenkriterien}
+	\begin{frame}{Aufgabenanforderungen}
 		\begin{itemize}
 			\item Plausibilität\\
 			\vspace{\baselineskip}
 			\item Komplexität\\
 			\vspace{\baselineskip}
+            \item Nutzung der Standard-Java-API\\
+            \vspace{\baselineskip}
 			\item Länge
 			\begin{itemize}
 				\item $\sim$ 100 Zeilen Dokumentation
@@ -187,7 +189,7 @@
 
 	\begin{frame}{Bearbeitungszeit nach Konstruktor}
 		\begin{figure}
-			\includegraphics[scale=0.37]{graphics/box_time-constructor.png}
+			\includegraphics[scale=0.32]{graphics/box_time-constructor.png}
 			\caption{\label{fig:box_time-constructor.png} Die Bearbeitungszeit nach Art des Konstruktors}
 		\end{figure}
 	\end{frame}
@@ -211,12 +213,12 @@
 		Fragen?
 	\end{frame}
 
-%	\begin{frame}[allowframebreaks]{Bibliographie}
+\begin{frame}[allowframebreaks]{Bibliographie}
 
-%		\bibliography{Presentation}
-%		\bibliographystyle{abbrv}
+		\bibliography{Presentation}
+		\bibliographystyle{abbrv}
 
-%	\end{frame}
+\end{frame}
 
 %%% FEATURES %%%
 
