fifth round of updates
added first draft of Validität

--- a/Presentation.tex
+++ b/Presentation.tex
@@ -40,14 +40,14 @@
 			\hfill - ISO 9241-11
 		\end{block}
 		\vspace{\baselineskip}
-		\begin{block}{API Usability i}
+		\begin{block}{API Usability}
 			\textit{[...] four main research questions, which characterize fundamental aspects of usability: understandability, abstraction level, reusability, and learnability.}	
 			\hfill - Piccioni, Furia \& Meyer~\cite{6681333}
 		\end{block}
-		\begin{block}{API Usability ii}
-			\textit{The first-level arributes are: Knowability, Operability, Efficiency, Robustness, Safety, Subjective satisfaction.}	
-			\hfill - Mosqueira-Rey, et. al
-		\end{block}
+%		\begin{block}{API Usability}
+%			\textit{The first-level arributes are: Knowability, Operability, Efficiency, Robustness, Safety, Subjective satisfaction.}	
+%			\hfill - Mosqueira-Rey, et. al
+%		\end{block}
 	
 	\end{frame}
 
@@ -202,8 +202,28 @@
 	\end{frame}
 
 	\begin{frame}{Validität}
-
-	\end{frame}	
+		\begin{columns}[T,onlytextwidth]
+	
+			\column{0.5\textwidth}
+			Intern
+			\begin{itemize}
+				\item Verständlichkeit der Konstruktoren abhängig vom Verständnis des allgemeinen Problems/Sachgebiets
+				\item Web-basiert (keine volle Kontrolle über das Verhalten der Teilnehmer)
+				\item Fehlerfall: fehlender Parameter
+			\end{itemize}
+		
+			\column{0.5\textwidth}
+			Extern
+			\begin{itemize}
+				\item Ungewohnte Umgebung (Peter)
+				\item Nicht repräsentativ für größere, komplexere APIs
+				\item default-Konstruktoren nicht immer sinnvoll
+				\item Nur ein Aufgabentyp: Fehlersuche
+				\item Studie $\neq$ reale Bedingungen
+			\end{itemize}
+		\end{columns}	
+	
+	\end{frame}
 
 \section{Vielen Dank für eure Aufmerksamkeit}
 
@@ -213,12 +233,10 @@
 		Fragen?
 	\end{frame}
 
-\begin{frame}[allowframebreaks]{Bibliographie}
-
+	\begin{frame}[allowframebreaks]{Bibliographie}
 		\bibliography{Presentation}
 		\bibliographystyle{abbrv}
-
-\end{frame}
+	\end{frame}
 
 %%% FEATURES %%%
 
