--- a/Presentation.tex
+++ b/Presentation.tex
@@ -224,6 +224,10 @@
 		\end{columns}	
 	
 	\end{frame}
+	
+	\begin{frame}[standout]{Fazit}
+		Unsere Hypothese wird durch die Resultate NICHT bestätigt.
+	\end{frame}
 
 \section{Vielen Dank für eure Aufmerksamkeit}
 
