--- a/Presentation.tex
+++ b/Presentation.tex
@@ -226,7 +226,7 @@
 	\end{frame}
 	
 	\begin{frame}[standout]{Fazit}
-		Unsere Hypothese wird durch die Resultate NICHT bestätigt.
+		Unsere Hypothese wird durch die Resultate \underline{nicht} bestätigt.
 	\end{frame}
 
 \section{Vielen Dank für eure Aufmerksamkeit}
