--- a/Presentation.tex
+++ b/Presentation.tex
@@ -152,18 +152,19 @@
 	\begin{frame}{Aufgabenanforderungen}
 		\begin{itemize}
 			\item Plausibilität\\
+				\begin{itemize}
+					\item Nutzung der Standard-Java-API
+				\end{itemize}
 			\vspace{\baselineskip}
 			\item Komplexität\\
 			\vspace{\baselineskip}
-            \item Nutzung der Standard-Java-API\\
+			\item Untereinander unabhängig (Minimierung der Lerneffekte)\\
             \vspace{\baselineskip}
 			\item Länge
 			\begin{itemize}
 				\item $\sim$ 100 Zeilen Dokumentation
 				\item $\sim$ 80 Zeilen Code
 			\end{itemize}
-			\vspace{\baselineskip}
-			\item Untereinander unabhängig (Minimierung der Lerneffekte)\\
 		\end{itemize}
 	\end{frame}
 
@@ -194,7 +195,7 @@
 		\end{figure}
 	\end{frame}
 
-	\begin{frame}{Bearbeitungszeit nach AOI}
+	\begin{frame}{Bearbeitungszeit nach AOI (semantic)}
 		\begin{figure}
 			\includegraphics[scale=0.39]{graphics/box_time-aoi_sem.png}
 			\caption{\label{fig:box_time-aoi_sem.png} Die Bearbeitungszeit der verschiedenen Areas of Interest (AOI) der semantischen Aufgaben nach Art des Konstruktors}
