Added some graphics.

--- a/Presentation.tex
+++ b/Presentation.tex
@@ -184,6 +184,20 @@
 \section{Resultate}
 
 	\begin{frame}{Stichprobenbeschreibung}
+    
+    \begin{itemize}
+        \item 31 Probanden für semantischen Aufgaben
+        \item 28 Probanden für syntaktische Aufgaben
+        \item Geschlecht
+        \begin{itemize}
+            \item 20 Männer
+            \item 3 Frauen
+            \item 8 ohne Angabe
+        \end{itemize}
+        \item Alter zwischen 16 - 27 ($\tilde{x} = 22$ Jahre)
+        \item 6 Jahre Programmiererfahrung (Median)
+        
+    \end{itemize}
 	 
 	\end{frame}
 
@@ -194,10 +208,10 @@
 		\end{figure}
 	\end{frame}
 
-	\begin{frame}{Bearbeitungszeit nach AOI}
+	\begin{frame}{Erfolgsquote nach Konstruktor (semantic)}
 		\begin{figure}
-			\includegraphics[scale=0.39]{graphics/box_time-aoi_sem.png}
-			\caption{\label{fig:box_time-aoi_sem.png} Die Bearbeitungszeit der verschiedenen Areas of Interest (AOI) der semantischen Aufgaben nach Art des Konstruktors}
+			\includegraphics[width=0.734\textwidth]{graphics/bar_result_sem.png}
+			\caption{\label{fig:bar_result_sem.png} Resultat der Aufgabe nach Art des Konstruktors für die semantischen Aufgaben}
 		\end{figure}
 	\end{frame}
 
