a bunch of small adjustments

--- a/Presentation.tex
+++ b/Presentation.tex
@@ -105,11 +105,11 @@
 		\begin{itemize}
 			\item Web-basierte Studie\\
 			\vspace{\baselineskip}
-			\item Vier Quellcode-Ausschnitte pro Proband\\
+			\item Within subjects
 			\vspace{\baselineskip}
 			\item Fehlersuche\\
 			\vspace{\baselineskip}
-			\item Within subjects
+			\item Vier Quellcode-Ausschnitte pro Proband\\
 		\end{itemize}
 	\end{frame}
 
@@ -159,7 +159,7 @@
 			\vspace{\baselineskip}
 			\item Komplexität\\
 			\vspace{\baselineskip}
-			\item Untereinander unabhängig (Minimierung der Lerneffekte)\\
+			\item Untereinander unabhängig\\
             \vspace{\baselineskip}
 			\item Länge
 			\begin{itemize}
@@ -179,7 +179,7 @@
 	\begin{frame}{Peter  ii}	
 		\begin{figure}
 			\includegraphics[scale=0.15]{graphics/peter_correction.png}
-			\caption{\label{fig:peter_correction.png} Durch das Drücken der Leertaste konnten sie indizieren das sie den Fehler gefunden hatten.}
+			\caption{\label{fig:peter_correction.png} Durch das Drücken der Leertaste konnten Probanden indizieren das sie den Fehler gefunden hatten.}
 		\end{figure}
 	\end{frame}
 
@@ -210,10 +210,10 @@
 		\end{figure}
 	\end{frame}
 
-	\begin{frame}{Erfolgsquote nach Konstruktor (semantic)}
+	\begin{frame}{Erfolgsquote nach Konstruktor}
 		\begin{figure}
-			\includegraphics[width=0.734\textwidth]{graphics/bar_result_sem.png}
-			\caption{\label{fig:bar_result_sem.png} Resultat der Aufgabe nach Art des Konstruktors für die semantischen Aufgaben}
+			\includegraphics[width=0.76\textwidth]{graphics/bar_result_sem.png}
+			\caption{\label{fig:bar_result_sem.png} Resultat der semantischen Aufgaben nach Art des Konstruktors}
 		\end{figure}
 	\end{frame}
 
@@ -225,7 +225,6 @@
 			\begin{itemize}
 				\item Verständlichkeit der Konstruktoren abhängig vom Verständnis des allgemeinen Problems/Sachgebiets
 				\item Web-basiert (keine volle Kontrolle über das Verhalten der Teilnehmer)
-				\item Fehlerfall: fehlender Parameter
 			\end{itemize}
 		
 			\column{0.5\textwidth}
